<resources>
    <string name="app_name">BagDrop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  ******* PANTALLA LOGIN ******* -->

    <string name="msjBienvenida">Bienvenido a BagDrop</string>
    <string name="tvIniciarSesion">Iniciar Sesión</string>
    <string name="msjCorreo">Correo electrónico</string>
    <string name="msjContraseña">Contraseña</string>
    <string name="btnAcceder">Acceder</string>
    <string name="tvNoCuenta">¿No tienes cuenta? Regístrate aquí</string>


    <!--  ******* PANTALLA REGISTRARSE ******* -->

    <string name="tvRegistrarse">Registarse en BagDrop</string>
    <string name="tvDatosPersonales">Ingresa tu información personal</string>
    <string name="etNombre">Nombre Completo</string>
    <string name="etIngresajCorreo">Correo electrónico</string>
    <string name="etTelefono">Número de teléfono</string>
    <string name="etCrearContraseña">Crear Contraseña</string>
    <string name="btnCrearCuenta">Crear Cuenta</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="msjRegistroExitoso">Registro exitoso</string>
    <string name="tvSiCuenta">¿Ya tienes cuenta? Accede aquí</string>


    <!--  ******* PANTALLA INICIO ******* -->
    <string name="tvSaludo">Hola,...</string>
    <string name="tvpreg">¿Qué hacemos hoy?</string>
    <string name="tvTituloCard">Sin reservas activas"</string>
    <string name="tvSubtituloTarjeta">Añade una reserva para guardar tu equipaje.</string>
    <string name="btnHacerReserva">Hacer una reserva</string>
    <string name="tvUbi">¿Dónde estamos?</string>


    <!-- ****** PANTALLA DE RESERVAR ***********-->
    <string name="tvTituloReserva">Nueva Reserva</string>
    <string name="tvPeq">Pequeño</string>
    <string name="tvReg">Mediano</string>
    <string name="tvIrr">Grande</string>

    <string name="tvPeqDescripcion">Bolsa de compras, Boslo personal</string>
    <string name="tvRegDescripcion">Maleta, mochila, equipaje de cabina</string>
    <string name="tvIrrDescripcion">Bicicleta, material deportivo, cochecito</string>

    <string name="tvPrecioPeq">3,00 €/día</string>
    <string name="tvPrecioReg">4,50 €/día</string>
    <string name="tvPrecioIrr">5,50 €/día</string>
    <string name="btnMas">+</string>
    <string name="btnMenos">–</string>
    <string name="tvCantidad">0</string>

    <string name="btnComprobar">Comprobar Disponibilidad</string>
    <string name="btnCancelarReserva">Cancelar"</string>
    <string name="btnConfirmar">Confirmar Reserva</string>

    <string name="tvSubtituloTarifa">Tarifa plana por día natural.</string>
    <string name="tvFechaEntrada">Entrada (Día y Hora)</string>
    <string name="tvFechaSalida">Salida (Día y Hora)</string>

    <string name="tvFecha">Fecha</string>
    <string name="tvHora">Hora</string>


    <!-- ****** CardView Reservas ********* -->
    <string name="cardEstado">Activa</string>
    <string name="pinReserva">PIN de Taquilla</string>
    <string name="btndCancelarReserva">Cancelar"</string>
    <string name="btnCompletarReserva">Completado"</string>
    <string name="tvTituloRecordatorio">Recordatorio de Reserva</string>


    <!-- ******** PANTALLA MIS RESERVAS ********-->
    <string name="tvMisReservas">Mis Reservas</string>
    <string name="btnNuevaReserva">Nueva Reserva</string>
    <string name="btnHistorial">Historial"</string>
    <string name="tvListaVacia">Aún no tienes reservas activas</string>


    <!-- ******** PANTALLA HISTORIAL ********-->
    <string name="tvTituloHistorial">Historial de Reservas</string>
    <string name="tvListaVaciaHistorial">Aún no tienes reservas en el historial</string>
    <string name="btnVolver">Volver</string>



    <!-- ******** PANTALLA PERFIL ********-->
    <string name="tvPerfil">Perfil</string>
    <string name="tvMiCuenta">MI CUENTA</string>
    <string name="tvID">ID del Usuario</string>
    <string name="tvCorreo">Correo</string>
    <string name="tvTelefono">Teléfono</string>
    <string name="tvCambiarContrasena">Cambiar Contraseña</string>
    <string name="btnCerrarSesion">Cerrar Sesión</string>



</resources>