<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/android:colorBackground"
    android:padding="24dp"
    tools:context=".ui.menu.MisReservasFragment">


    <TextView
        android:id="@+id/tvMisReservas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvMisReservas"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/btnNuevaReserva"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorOnSecondary"
        app:cornerRadius="12dp"
        android:text="@string/btnNuevaReserva"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMisReservas" />

    <Button
        android:id="@+id/btnHistorial"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorOnSecondary"
        app:cornerRadius="12dp"
        android:layout_marginTop="50dp"
        android:text="@string/btnHistorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMisReservas" />

    <View
        android:id="@+id/separador"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?attr/colorOutlineVariant"
        app:layout_constraintTop_toBottomOf="@+id/btnNuevaReserva"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvReservas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separador"
        tools:listitem="@layout/item_reserva" />

    <ProgressBar
        android:id="@+id/progressBarLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separador" />

    <TextView
        android:id="@+id/tvListaVacia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvListaVacia"
        android:textColor="?attr/colorOutline"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separador" />

</androidx.constraintlayout.widget.ConstraintLayout>