<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/android:colorBackground"
    android:padding="20dp"
    tools:context=".ui.menu.HistorialFragment">

    <TextView
        android:id="@+id/tvTituloHistorial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tvTituloHistorial"
        android:textAlignment="center"
        android:textColor="?attr/colorOnBackground"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/separadorHistorial"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="?attr/colorOutlineVariant"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloHistorial"/>

    <!-- recycler de las resrevas -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHistorial"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnVolverHistorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separadorHistorial"
        tools:listitem="@layout/item_reserva" />

    <ProgressBar
        android:id="@+id/progressBarHistorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnVolverHistorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separadorHistorial" />

    <TextView
        android:id="@+id/tvHistorialVacio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvListaVaciaHistorial"
        android:textColor="?attr/colorOutline"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnVolverHistorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separadorHistorial" />

    <Button
        android:id="@+id/btnVolverHistorial"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btnVolver"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorOnSecondary"
        app:cornerRadius="12dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>