<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:padding="24dp"
    tools:context=".ui.menu.PerfilFragment">

    <!-- CARD PERFIL -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp"
        app:strokeWidth="1dp"
        app:strokeColor="?attr/colorOutlineVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/ic_perfil" />

            <TextView
                android:id="@+id/tvNombrePerfil"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:textColor="?attr/colorSecondary"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="Amed Torres" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvMiCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tvMiCuenta"
        android:textStyle="bold"
        android:textColor="?attr/colorOnBackground"
        android:textSize="16sp"
        android:letterSpacing="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardHeader" />

    <!-- LISTA DE DATOS Y OPCIONES -->
    <LinearLayout
        android:id="@+id/layoutOpciones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMiCuenta">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp">

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/ic_id" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tvID"
                android:textColor="?attr/colorOnBackground"
                android:textSize="14sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvUsuarioIdValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="#A1B2C3"
                android:textColor="?attr/colorOnBackground"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="?attr/colorOutlineVariant" />

        <!-- correo  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp">

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/ic_correo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tvCorreo"
                android:textColor="?attr/colorOnBackground"
                android:textSize="14sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvEmailValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="amed@gmail.com"
                android:textColor="?attr/colorOnBackground"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="?attr/colorOutlineVariant" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp">

            <ImageView
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:src="@drawable/ic_telefono"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tvTelefono"
                android:textColor="?attr/colorOnBackground"
                android:textSize="14sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvTelefonoValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="+34 600 000 000"
                android:textColor="?attr/colorOnBackground"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="?attr/colorOutlineVariant" />

        <!-- Cambiar Contraseña -->
        <LinearLayout
            android:id="@+id/itemCambiarContrasena"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="16dp">

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/ic_clave" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tvCambiarContrasena"
                android:textColor="?attr/colorOnBackground"
                android:textSize="15sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <!-- Icono de flechita para indicar que se puede tocar -->
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_adelante"
        />

        </LinearLayout>

    </LinearLayout>

    <!-- BOTÓN CERRAR SESIÓN -->
    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="?attr/colorError"
        android:text="@string/btnCerrarSesion"
        android:textSize="15sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>